chore: update docker

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,17 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "ES2021",
+    "target": "esnext",
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "~/*": ["./src/*"]
+    },
+    "types": ["node", "jest"],
+    "resolveJsonModule": true,
+    "skipDefaultLibCheck": true,
+    "esModuleInterop": true,
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
