--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "generate": "prisma generate",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "NODE_OPTIONS=--openssl-legacy-provider nest start",
+    "start": "nest start",
     "start:dev": "webpack --config webpack.config.js --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "NODE_OPTIONS=--openssl-legacy-provider node dist/main.js",
+    "start:prod": "node dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -42,6 +42,7 @@
     "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
+    "rimraf": "^5.0.7",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
