--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@nestjs/apollo": "^12.1.0",
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^10.3.9",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.1.1",
     "@nestjs/platform-express": "^10.0.0",
@@ -34,6 +34,7 @@
     "class-validator": "^0.14.1",
     "graphql": "^16.8.1",
     "graphql-tools": "^9.0.1",
+    "ioredis": "^5.4.1",
     "reflect-metadata": "^0.2.0",
     "run-script-webpack-plugin": "^0.0.11",
     "rxjs": "^7.8.1",
@@ -42,7 +43,6 @@
     "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
-    "rimraf": "^5.0.7",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
@@ -58,6 +58,7 @@
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "prisma": "^5.15.0",
+    "rimraf": "^5.0.7",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
