--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.1.1",
+    "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.15.0",
     "apollo-server-core": "^3.13.0",
@@ -34,6 +35,7 @@
     "class-validator": "^0.14.1",
     "graphql": "^16.8.1",
     "graphql-tools": "^9.0.1",
+    "mongoose": "^8.4.3",
     "path": "^0.12.7",
     "reflect-metadata": "^0.2.0",
     "run-script-webpack-plugin": "^0.0.11",
